# way

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  clipboard.rs  main.rs
src/wayland/: connection.rs  messages.rs  mod.rs
src/wayland/globals/: display.rs  mod.rs
